[gd_scene load_steps=16 format=2]

[ext_resource path="res://Multiplayer.gd" type="Script" id=1]
[ext_resource path="res://materials/blur.tres" type="Material" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="AnimationNodeAnimation" id=1]
animation = "Practice"

[sub_resource type="AnimationNodeAnimation" id=2]
animation = "Race"

[sub_resource type="AnimationNodeAnimation" id=3]
animation = "WinnerCeremony"

[sub_resource type="AnimationNodeStateMachineTransition" id=4]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=5]

[sub_resource type="AnimationNodeStateMachineTransition" id=6]

[sub_resource type="AnimationNodeStateMachineTransition" id=7]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=8]
states/Practice/node = SubResource( 1 )
states/Practice/position = Vector2( 240, 41 )
states/Race/node = SubResource( 2 )
states/Race/position = Vector2( 483, 41 )
states/WinnerCeremony/node = SubResource( 3 )
states/WinnerCeremony/position = Vector2( 355, 149 )
transitions = [ "Practice", "Race", SubResource( 4 ), "Race", "WinnerCeremony", SubResource( 5 ), "Race", "Practice", SubResource( 6 ), "WinnerCeremony", "Practice", SubResource( 7 ) ]
start_node = "Practice"
graph_offset = Vector2( -20, -23 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=9]

[sub_resource type="Animation" id=10]
length = 30.0
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Panel/VBoxContainer/Mode:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Practice" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel/VBoxContainer/Caption:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Race starting in... " ]
}

[sub_resource type="Animation" id=11]
resource_name = "Race"
length = 300.0
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Panel/VBoxContainer/Mode:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.420448 ),
"update": 1,
"values": [ "Race" ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "start_race" ],
"method": "rpc"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel/VBoxContainer/Caption:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Complete 3 laps first to win!" ]
}

[sub_resource type="Animation" id=12]
resource_name = "WinnerCeremony"
length = 15.0
tracks/0/type = "value"
tracks/0/path = NodePath("Panel/VBoxContainer/Mode:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Game Over!" ]
}

[node name="Multiplayer" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
editor/display_folded = true
material = ExtResource( 2 )
anchor_right = 1.0
margin_bottom = 53.0
rect_min_size = Vector2( 0, 56 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Mode" type="Label" parent="Panel/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 14.0
text = "Race"
align = 1
valign = 1
uppercase = true

[node name="Caption" type="Label" parent="Panel/VBoxContainer"]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 32.0
text = "Complete 3 laps first to win!"
align = 1
valign = 1

[node name="Time" type="Label" parent="Panel/VBoxContainer"]
margin_top = 36.0
margin_right = 1024.0
margin_bottom = 50.0
text = "99:99:99"
align = 1
valign = 1
uppercase = true

[node name="Control" type="Panel" parent="."]
editor/display_folded = true
material = ExtResource( 2 )
anchor_bottom = 1.0
margin_right = 308.0

[node name="HBoxContainer" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="Label" type="Label" parent="Control/HBoxContainer"]
margin_right = 268.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 740, 70 )
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Ironhounds"
uppercase = true

[node name="TextureRect" type="TextureRect" parent="Control/HBoxContainer"]
margin_top = 18.0
margin_right = 268.0
margin_bottom = 82.0
texture = ExtResource( 3 )

[node name="ConnectLabel" type="Label" parent="Control/HBoxContainer"]
margin_top = 86.0
margin_right = 268.0
margin_bottom = 143.0
size_flags_vertical = 3
text = "Connect"
valign = 2

[node name="HostButton" type="Button" parent="Control/HBoxContainer"]
margin_top = 147.0
margin_right = 268.0
margin_bottom = 167.0
text = "Host"
align = 0

[node name="ORLabel2" type="Label" parent="Control/HBoxContainer"]
margin_top = 171.0
margin_right = 268.0
margin_bottom = 219.0
rect_pivot_offset = Vector2( 740, 70 )
size_flags_horizontal = 7
size_flags_vertical = 0
text = "
--- or ---
"
uppercase = true

[node name="IPInput" type="LineEdit" parent="Control/HBoxContainer"]
margin_top = 223.0
margin_right = 268.0
margin_bottom = 247.0
hint_tooltip = "Default port is 30001"
text = "127.0.0.1"
clear_button_enabled = true
placeholder_text = "Server IP (Port 30001)"

[node name="JoinButton" type="Button" parent="Control/HBoxContainer"]
margin_top = 251.0
margin_right = 268.0
margin_bottom = 271.0
text = "Join"
align = 0

[node name="ChatLabel" type="Label" parent="Control/HBoxContainer"]
margin_top = 275.0
margin_right = 268.0
margin_bottom = 332.0
size_flags_vertical = 3
text = "Chat"
valign = 2

[node name="ChatHistory" type="ItemList" parent="Control/HBoxContainer"]
margin_top = 336.0
margin_right = 268.0
margin_bottom = 532.0
rect_min_size = Vector2( 0, 196 )
size_flags_vertical = 3
auto_height = true

[node name="ChatInput" type="LineEdit" parent="Control/HBoxContainer"]
margin_top = 536.0
margin_right = 268.0
margin_bottom = 560.0
clear_button_enabled = true
placeholder_text = "Chat"

[node name="AnimationTree" type="AnimationTree" parent="."]
pause_mode = 1
tree_root = SubResource( 8 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 1
autoplay = "Practice"
anims/Practice = SubResource( 10 )
anims/Race = SubResource( 11 )
anims/WinnerCeremony = SubResource( 12 )

[node name="AnimTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true
[connection signal="pressed" from="Control/HBoxContainer/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="text_entered" from="Control/HBoxContainer/IPInput" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="Control/HBoxContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="timeout" from="AnimTimer" to="." method="_on_AnimTimer_timeout"]
